# xmarte-runner

./: .gitignore  .gitlab-ci.yml  Guidelines.md  LICENSE  MANIFEST.in  README.md  install.sh  pyproject.toml  settings.yml
.github/workflows/: publish-pages.yml  test-and-lint.yml
docs/source/: conf.py  debugging.rst  index.rst  install.rst  usage.rst
tests/: test_server.py
xmarterunner/: __main__.py  server.py
xmarterunner/templates/: 404.html  500.html  index.html
